Improve the APIs

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <h1 class="display-3">TODOs</h1>
                 <p class="lead">
-                This is a TODO list which combines your Google Calendar :)
+                These are TODOs within future 7 days, which combines your Google Calendar :)
                 </p>
             </div>
         </div>
